# Spidr

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py  vcpkg.json
cmake/: CMakeHDILib.cmake  ConfigVersion.cmake.in  InstallArtifactoryPackage.cmake
example/: CMakeLists.txt  README.md  SpidrExample.cpp
example/data/: CheckeredBoxes_2Ch_32.txt  CheckeredBoxes_2Ch_64.txt
example/data/CheckeredBoxes_2Ch_32_tiff/: 0.tif  1.tif
example/data/CheckeredBoxes_2Ch_64_tiff/: 0.tif  1.tif
example/eval/: eval_embedding.py
include/: DistanceCalculation.h  EvalUtils.h  FeatureExtraction.h  FeatureUtils.h  KNNDists.h  KNNUtils.h  SpidrAnalysis.h  SpidrAnalysisParameters.h  TsneComputation.h
python_wrapper/: CMakeLists.txt  README.md  setup.cfg
python_wrapper/example/: example_chamfer.py  example_multiple.py  requirements.txt  utils.py
python_wrapper/src/: SpidrBind.cpp  SpidrWrapper.cpp  SpidrWrapper.h
src/: DistanceCalculation.cpp  EvalUtils.cpp  FeatureExtraction.cpp  FeatureUtils.cpp  KNNUtils.cpp  SpidrAnalysis.cpp  SpidrAnalysisParameters.cpp  TsneComputation.cpp
